# financial-portfolio-rebalancer

./: README.md  fetch_data.ipynb  flutter_bootstrap.js  flutter_service_worker.js  index.html  main.dart.js  vcpkg.json  version.json
.github/workflows/: deploy-flutter-web.yml
assets/: AssetManifest.bin.json  AssetManifest.json  NOTICES
auto-trader/: .gitignore  CMakeLists.txt  README.md
auto-trader/src/: loader.hpp  portfolio_rebalancer.hpp  writer.cpp
data/: portfolio.json
docs/: audit.md  need.md  reflection.md
lib/models/: stock.dart  stock.g.dart
lib/providers/: portfolio_provider.dart
lib/utils/: enums.g.dart
macos/Runner/Configs/: AppInfo.xcconfig
src/: loader.cpp  main.cpp  models.hpp  portfolio_rebalancer.cpp  strategies.hpp  writer.hpp
test/: widget_test.dart
time-series-forecast/: Dockerfile  README.md  cronjob.yaml  stockpricepredictor.py
trade-dashboard/: pubspec.yaml
trade-dashboard/android/app/: build.gradle
trade-dashboard/docs/: audit_changes.md  evaluation.md
trade-dashboard/ios/Runner.xcodeproj/: project.pbxproj
trade-dashboard/lib/: main.dart
trade-dashboard/lib/models/: portfolio_entry.dart
trade-dashboard/lib/utils/: stock_checker.dart
trade-dashboard/lib/views/: add_view.dart  financial_portfolio_app.dart
trade-dashboard/linux/: my_application.cc
trade-dashboard/macos/Runner.xcodeproj/: project.pbxproj
trade_dashboard/: README.md
trade_dashboard/linux/: CMakeLists.txt
trade_dashboard/web/: index.html
web/: manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+8 files in other folders)
